# denoising-autoencoder

./: .gitignore  README.md  pyproject.toml
autoencoder-python-lightning/src/: main.py
autoencoder-python-lightning/src/modeling/: dataset.py  encoder.py  noise.py
autoencoder-rust-burn/: Cargo.toml
autoencoder-rust-burn/src/: autoencoder.rs  data.rs  decoder.rs  encoder.rs  evaluation.rs  main.rs  training.rs
data/: .gitignore
src/: main.py
src/modeling/: autoencoder.py  dataset.py  decoder.py  noise.py
